--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -22,29 +22,6 @@
    border-bottom: 1px solid var(--pale-white);
 }
 
-.projects_box {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   padding: 25px 40px 25px 40px;
-}
-
-.boxes {
-   border-radius: 15px;
-   width: 300px;
-   height: 250px;
-   overflow: hidden;
-}
-
-.boxes img {
-   max-width: 100%;
-   height: 100%;
-}
-
-.boxes:hover {
-   border: 1px solid var(--pale-white);
-}
-
 .contact {
    display: flex;
    flex-direction: column;
@@ -77,4 +54,23 @@
    text-decoration: none;
    color: var(--pale-white);
    font-size: 18px;
+}
+
+form {
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   color: var(--pale-white);
+   width: 400px;
+   margin-bottom: 20px;
+}
+
+form label {
+   font-size: 1.5rem;
+   padding-bottom: 5px;
+   padding-top: 5px;
+}
+
+textarea {
+   resize: none;
 }
